apps/nginx-proxy/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-proxy
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: nginx-proxy
  template:
    metadata:
      labels:
        app: nginx-proxy
    spec:
      volumes:
        - name: nginx-config
          persistentVolumeClaim:
            claimName: nginx-config
      containers:
        - image: nginx:alpine
          imagePullPolicy: IfNotPresent
          name: nginx-proxy
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/
              name: nginx-config
      restartPolicy: Always
