apps/nginx-proxy/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx-proxy
  ports:
    - port: 8080
      targetPort: 8080
      name: fileserver
      protocol: TCP
    - port: 8081
      targetPort: 8081
      name: homeassistant
      protocol: TCP
    - port: 8082
      targetPort: 8082
      name: supapanya-hass
      protocol: TCP
  type: ClusterIP
