apps/nginx-proxy/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: nginx-fileserver-tls
      hosts:
        - fileserver.picturo.us
    - secretName: nginx-homeassistant-tls
      hosts:
        - homeassistant-test.picturo.us
    - secretName: nginx-supapanyahass-tls
      hosts:
        - supapanyahass-test.picturo.us
  rules:
    - host: fileserver.picturo.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8080
    - host: homeassistant-test.picturo.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8080
    - host: supapanyahass-test.picturo.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8080
